[gd_scene load_steps=2 format=2]

[ext_resource path="res://AddPopup.gd" type="Script" id=1]

[node name="AddPopup" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 100 )
popup_exclusive = true
window_title = "Add a new enemy"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 1248.0
margin_bottom = 24.0
placeholder_text = "Name"
caret_blink = true

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1248.0
margin_bottom = 42.0
text = "Set the name of the new enemy"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 1248.0
margin_bottom = 66.0
custom_constants/separation = 64
alignment = 1

[node name="OK" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 549.0
margin_right = 580.0
margin_bottom = 20.0
text = "OK"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 644.0
margin_right = 698.0
margin_bottom = 20.0
text = "Cancel"
[connection signal="about_to_show" from="." to="." method="_on_AddPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_AddPopup_popup_hide"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/NameEdit" to="." method="_on_NameEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
